--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -74,17 +74,29 @@
 				<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
 				<%= i.text_field :website, :placeholder => "Personal website (or blog)" %>
 
-				<div class="sociallink">
+				<% if !current_teacher.omnihash["twitter"].nil? %>
+					<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
+					<%= text_field_tag "", :value => current_teacher.omnihash["twitter"]["username"] %>
+				<% end %>
 
-					<button class="zocial twitter" name="buttonredirect" value="twitter" style="font-size:11px">Link your Twitter</button>
+				<% if !current_teacher.omnihash["facebook"].nil? %>
+					<%= image_tag('settings/facebook.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
+					<%= text_field_tag "", :value => current_teacher.omnihash["facebook"]["username"] %>					
+				<% end %>
 
-					<button class="zocial facebook" name="buttonredirect" value="facebook" style="font-size:11px">Link your Facebook</button>
+				<% if current_teacher.omnihash["facebook"].nil? || current_teacher.omnihash["twitter"].nil? %>
+					<div class="sociallink">
 
-					<div class="desctext">
-						Add your social networks to your profile! We'll also subscribe you to your friends that are already on Claco.
+						<button class="zocial twitter" name="buttonredirect" value="twitter" style="font-size:11px">Link your Twitter</button>
+
+						<button class="zocial facebook" name="buttonredirect" value="facebook" style="font-size:11px">Link your Facebook</button>
+
+						<div class="desctext">
+							Add your social networks to your profile! We'll also subscribe you to your friends that are already on Claco.
+						</div>
+
 					</div>
-
-				</div>
+				<% end %>
 
 			</div>
 
