--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -76,12 +76,12 @@
 
 				<% if !current_teacher.omnihash["twitter"].nil? %>
 					<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
-					<%= text_field_tag("", :value => current_teacher.omnihash["twitter"]["username"], :disabled => true)%><br />
+					<%= text_field_tag("", current_teacher.omnihash["twitter"]["username"], :disabled => true)%><br />
 				<% end %>
 
 				<% if !current_teacher.omnihash["facebook"].nil? %>
 					<%= image_tag('settings/facebook.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
-					<%= text_field_tag("", :value => current_teacher.omnihash["facebook"]["username"], :disabled => true)%><br />
+					<%= text_field_tag("", current_teacher.omnihash["facebook"]["username"], :disabled => true)%><br />
 				<% end %>
 
 				<% if current_teacher.omnihash["facebook"].nil? || current_teacher.omnihash["twitter"].nil? %>
