--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -75,7 +75,7 @@
 				<%= i.text_field :website, :placeholder => "Personal website (or blog)" %><br />
 
 				<% if !current_teacher.omnihash["twitter"].nil? %>
-					<%= image_tag('settings/website.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
+					<%= image_tag('settings/twitter.png', :style => "float:left; margin-top:7px;margin-right:5px") %>
 					<%= text_field_tag("", current_teacher.omnihash["twitter"]["username"], :disabled => true)%><br />
 				<% end %>
 
@@ -86,11 +86,12 @@
 
 				<% if current_teacher.omnihash["facebook"].nil? || current_teacher.omnihash["twitter"].nil? %>
 					<div class="sociallink">
-
-						<button class="zocial twitter" name="buttonredirect" value="twitter" style="font-size:11px">Link your Twitter</button>
-
-						<button class="zocial facebook" name="buttonredirect" value="facebook" style="font-size:11px">Link your Facebook</button>
-
+						<% if current_teacher.omnihash["twitter"].nil? %>
+							<button class="zocial twitter" name="buttonredirect" value="twitter" style="font-size:11px">Link your Twitter</button>
+						<% end %>
+						<% if current_teacher.omnihash["facebook"].nil? %>
+							<button class="zocial facebook" name="buttonredirect" value="facebook" style="font-size:11px">Link your Facebook</button>
+						<% end %>
 						<div class="desctext">
 							Add your social networks to your profile! We'll also subscribe you to your friends that are already on Claco.
 						</div>
