--- a/app/assets/stylesheets/editinfo.css
+++ b/app/assets/stylesheets/editinfo.css
@@ -28,9 +28,9 @@
 	font-weight:bolder;
 	padding-bottom:3px;
 	margin-bottom:10px;
-	margin-top:10px;
+	margin-top:20px;
 	color:#555;
-	border-bottom:1px solid #eee;
+	border-bottom:1px solid #ddd;
 	clear:both;
 }
 
