--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -85,7 +85,7 @@
         <li>
           <a href="<%= current_teacher.omnihash["twitter"]["profile"] %>" target="_blank">
             <span class="twitterIcon"><%= image_tag("settings/twitter.png", :style => "margin-top:-4px") %></span>
-            @<%= current_teacher.omnihash["twitter"]["username"] %>
+            @<%= @teacher.omnihash["twitter"]["username"] %>
           </a>
         </li>
         <% end %>
