--- a/app/assets/stylesheets/teacher.css
+++ b/app/assets/stylesheets/teacher.css
@@ -432,6 +432,76 @@ ul.nav-tabs.onProfile li.active a {
 
 .content-list .content-item .drop-tog{
   float:right;
-  margin-top:45px;
+  margin-top:65px;
   margin-right:15px;
+}
+
+
+#droptog-btn {
+  padding: 12px 9px 10px 9px;
+  color:#333;
+  font-weight:bolder;
+  text-shadow: 0 1px 0 #555;
+  background-color: #E5E5E5;
+  *background-color: #E5E5E5;
+  background-image: -ms-linear-gradient(top, #F9F9F9, #E5E5E5);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F9F9F9), to(#E5E5E5));
+  background-image: -webkit-linear-gradient(top, #F9F9F9, #E5E5E5);
+  background-image: -o-linear-gradient(top, #F9F9F9, #E5E5E5);
+  background-image: -moz-linear-gradient(top, #F9F9F9, #E5E5E5);
+  background-image: linear-gradient(top, #F9F9F9, #E5E5E5);
+  background-repeat: repeat-x;
+  border-color: #E1E1E1 #D8D9D9 #CECED0;
+  border-color: rgba(225, 225, 225, 0.99) rgba(216, 217, 217, 0.99) rgba(206, 206, 208, 0.99);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#F9F9F9', endColorstr='#E5E5E5', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+
+#droptog-btn:hover,
+#droptog-btn:active,
+#droptog-btn.active,
+#droptog-btn.disabled,
+#droptog-btn[disabled] {
+  color:#333;
+  font-weight:bolder;
+  background-color: #E5E5E5;
+  *background-color: #E5E5E5;
+
+}
+
+#droptog-btn:active,
+#droptog-btn.active {
+  color:#333;
+  font-weight:bolder;
+  background-color: #E5E5E5 \9;
+
+}
+
+.tog-arrow {
+   width:0px; 
+  height:0px; 
+  border-left:7px solid transparent;
+  border-right:7px solid transparent;
+  border-top:7px solid #747474;
+  font-size:0px;
+  line-height:0px;
+}
+
+
+
+.content-item .drop-tog .dropdown-menu{
+  margin-left:-68px !important;
+  min-width:100px !important;
+}
+
+.content-item .drop-tog .dropdown-menu li > a:hover, .dropdown-menu .active > a, .dropdown-menu .active > a:hover {
+  border:1px solid #ccc;
+  color:#444;
+  text-shadow: 0 1px 1px #fff;
+  margin:-1px;
+    background-color: #eee;
+
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
