--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -165,6 +165,11 @@
 
 			        <% if signed_in? && current_teacher.id.to_s == @binder.owner %>
 			            <div class="drop-tog">
+
+			            	<button id="snapbtn" class="btn modaction">Snap to binder</button>
+
+
+
 			            	<div class="btn-group">
 
 					          <button id="droptog-btn" data-toggle="dropdown" class="btn dropdown-toggle">
