--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -190,3 +190,337 @@
 
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id="form-helpers" style="display:none">
+
+  <div id="upload-form" style="display:none">
+    <div class="headtitle">
+      Upload File
+    </div>
+
+    <div class="bodcon">
+      <div class="conitem">
+        <div class="lablr">Choose a title</div>
+        <input type="file" />
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary">Upload File!</button>
+         <button class="btn" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  <div id="addweb-form" style="display:none">
+    <div class="headtitle">
+      Add web bookmark / embed
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+        <input name="weblink" class="weblink" style="width:300px" type="text" placeholder="http:// or <embed>" />
+        <input name="webtitle" maxlength="50" class="webtitle" style="width:300px" type="text" placeholder="Title of the web page" />
+
+        <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the web page"></textarea>
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Add this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+
+
+
+  <div id="addfolder-form" style="display:none">
+    <div class="headtitle">
+      Add new folder
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+        <input name="foldertitle" maxlength="50" class="firstfocus webtitle" style="width:300px" type="text" placeholder="Title of the new folder" />
+
+        <a href="#" style="font-size:11px; margin-left:5px" onClick="$(this).parent().find('.webdesc').show().focus();$(this).hide();return false">Add a description</a>
+        <textarea name="body" class="input-xlarge webdesc" rows="3" style="width:300px;display:none" placeholder="Description of the folder"></textarea>
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Add folder!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+
+
+  <div id="addfile-form" style="display:none">
+    <div class="headtitle">
+      Upload file
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+
+        <div class="file-upload-btn">
+          <input name="file" class="filepick" type="file" />
+          <a class="btn btn-primary btnsauce">Choose a file to upload!</a>
+        </div>
+
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn canceler" type="reset" onClick="$('#facebox .filepick').fileupload('destroy'); closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+  <div id="rename-form" style="display:none">
+    <div class="headtitle">
+      Rename
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+        <input name="newtitle" maxlength="50" class="firstfocus rename-title" style="width:260px" type="text" />
+        <input name="conid" class="conid" type="hidden" />
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Rename this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+
+
+  <div id="delete-form" style="display:none">
+    <div class="headtitle">
+      Delete
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+        <div style="margin: 5px 0 5px 0">Are you <strong>absolutely positive</strong> you want to delete this binder?</div>
+        <input name="conid" class="conid" type="hidden" />
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-danger showloader" type="submit">Yes, delete this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+
+  <div id="copy-form" style="display:none">
+    <div class="headtitle">
+      Copy
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+
+        <div class="fol-picker" style="margin-bottom:10px">
+
+          <div class="togbar" onclick="togglePicker(this)">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to copy this to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" name="folid" class="chosenOne" value="" />
+          </div>
+
+          <div class="pickerpane">
+
+            <% if !@root.nil? %>
+            <% @root.each do |binder| %>
+
+
+              <% if binder.parent["id"] == "0" %>
+
+                <div class="bndr">
+
+                  <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+                    <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                    <span class="dirtitle" onclick="selectPickFolder(this)">
+                      <img src="/assets/binders/folder.png" class="foldicon" />
+                      <%= binder.title %>
+                    </span>
+                    <div class="dirWrap"></div>
+
+                  </div>
+                </div>
+
+              <% end %>
+
+            <% end %>
+            <% end %>
+
+
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Copy this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+  <div id="move-form" style="display:none">
+    <div class="headtitle">
+      Move
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+
+        <div class="fol-picker" style="margin-bottom:10px">
+
+          <div class="togbar" onclick="togglePicker(this)">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to move this to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" name="target" class="chosenOne" value="" />
+          </div>
+
+          <div class="pickerpane">
+
+            <% if !@root.nil? %>
+            <% @root.each do |binder| %>
+
+            <div class="bndr">
+
+              <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+                <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                <span class="dirtitle" onclick="selectPickFolder(this)">
+                  <img src="/assets/binders/folder.png" class="foldicon" />
+                  <%= binder.title %>
+                </span>
+                <div class="dirWrap"></div>
+
+              </div>
+            </div>
+
+            <% end %>
+            <% end %>
+
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Move this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
