--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
 		</tr>
 		<tr>
 			<td class="labeler">Email</td>
-			<td><%= f.text_field :email %></td>
+			<td><%= f.email_field :email %></td>
 		</tr>
 		<tr>
 			<td class="labeler">Title</td>
