binderlist style fix

--- a/app/views/layouts/_binderlist.html.erb
+++ b/app/views/layouts/_binderlist.html.erb
@@ -30,19 +30,19 @@
 			    <% end %>
 
 			    <% if imgarr[1].nil? || imgarr[1].empty? %>
-					<img class="thumby1" src="/assets/common/nothumb.png" style="opacity:0" />
+					<img class="thumby1" src="/assets/common/nothumb.png" />
 				<% else %>
 					<img class="thumby1" src="<%= imgarr[1] %>" />
 				<% end %>
 
 			    <% if imgarr[2].nil? || imgarr[2].empty? %>
-					<img class="thumby2" src="/assets/common/nothumb.png" style="opacity:0" />
+					<img class="thumby2" src="/assets/common/nothumb.png" />
 				<% else %>
 					<img class="thumby2" src="<%= imgarr[2] %>" />
 				<% end %>
 
 			    <% if imgarr[3].nil? || imgarr[3].empty? %>
-					<img class="thumby3" src="/assets/common/nothumb.png" style="opacity:0" />
+					<img class="thumby3" src="/assets/common/nothumb.png" />
 				<% else %>
 					<img class="thumby3" src="<%= imgarr[3] %>" />
 				<% end %>
