--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -138,8 +138,8 @@
   background-image: linear-gradient(top, #D9E8FF, #BDD6FC);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D9E8FF', endColorstr='#BDD6FC', GradientType=0);
 
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);  
-    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);  
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);  
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);  
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 }
 
@@ -705,8 +705,8 @@
   background-color: #FEFE86;
 
 
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1); 
 
   margin-bottom:20px;
@@ -1144,19 +1144,47 @@
 }
 
 
+.actionswrap {
+  margin: 10px 0 25px 0;
+}
 
 .content-actions {
   background:#fff;
-  border:1px solid #ddd;
-  padding:10px;
-  margin: 10px 0 25px 0;
+  width:679px;
+  border:1px solid #ccc;
+  padding:15px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  z-index:99999999999999;
+}
+
+.content-actions button {
+  font-size: 14px;
+  font-weight:bolder;
+  color:#555;
+  margin-right:10px;
+}
+
+.content-actions button img {
+  float:left;
+  height:24px;
+  margin-right:5px;
+}
+
+.content-actions .texter {
+  padding-top:3px;
+  width:140px;
 }
 
 
 
+
+.actions-float {
+  -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.);
+    -moz-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1); 
+}
 
 
 
