--- a/app/assets/stylesheets/home/main.css
+++ b/app/assets/stylesheets/home/main.css
@@ -1,3 +1,66 @@
+.crossout {
+	text-decoration: line-through;
+	font-style: italic;
+}
+
+.starting-section {
+  background: white;
+  border-bottom: 3px solid #ddd;
+  height:250px;
+  padding:10px;
+}
+
+
+.starting-section .headtitle{
+	font-size:20px;
+	margin-top:20px;
+	margin-left:30px;
+	font-weight: bolder;
+	color:#444;
+	text-shadow: 0px 1px 2px #eee;
+}
+
+.starting-section .listbox{
+	margin-top:20px;
+	font-size: 14px;
+	margin-left:60px;
+}
+
+.starting-section .listbox .listitem {
+	font-weight:bolder;
+	color:#666;
+	margin-top:10px;
+	height:30px;
+}
+
+.starting-section .listbox .listitem .linker{
+	padding-top:6px;
+	margin-left:40px;
+}
+
+.starting-section .listbox .listitem .linker a{
+	cursor:pointer;
+}
+
+.starting-section .listbox .listitem .numbul{
+	width:30px;
+	height:24px;
+	padding-top:6px;
+	background:#555;
+	color:#fff;
+	text-align:center;
+	float:left;
+	text-shadow: 0px 1px 1px #333;
+	-webkit-border-radius: 20px;
+     -moz-border-radius: 20px;
+          border-radius: 20px;
+}
+
+
+
+
+
+
 #paneright {
 	margin-top:20px;
 	width:650px;
@@ -27,7 +90,72 @@
   background: #fff;
 }
 
+#paneright .whitebox .findppl{
+	background:#fff;
+	padding:10px;
+	-webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+    margin-bottom:15px;
 
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.05);  
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.05);  
+    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.05); 
+}
+
+#paneright .whitebox .findppl .maintxt{
+	font-size:14px;
+	color:#888;
+	font-weight:bolder;
+	text-shadow: 0 1px 0 #fff;
+}
+
+#paneright .whitebox .findppl .boxyleft{
+	padding: 5px 10px 10px 20px;
+	float:left;
+	width:225px;
+}
+
+#paneright .whitebox .findppl .boxyright{
+	padding: 5px 10px 10px 40px;
+	float:left;
+	width:300px;
+	border-left:1px solid #eee;
+}
+
+#paneright .whitebox .findppl .boxyright .imghold {
+	margin-top:5px;
+}
+
+#paneright .whitebox .findppl .boxyright .imghold img{
+	margin-right:7px;
+	margin-top:7px;
+	-webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.connectbtns {
+	font-size:13px;
+	margin-top:10px;
+}
+
+.finishbtn {
+	float:right;
+	margin-top:-34px;
+	margin-right:50px;
+	font-weight:bolder;
+}
+
+
+
+#newbinder {
+	font-weight:bolder;
+	font-size:14px;
+	width:250px;
+	padding: 7px 20px;
+	margin-top:-10px;
+}
 
 
 
