--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -1,6 +1,6 @@
 <% if @binder.current_version.croc? %>
 
-	<iframe id="crocFrame" width="700" height="600" class="embeddrop" frameborder="0" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe>
+	<center><iframe id="crocFrame" width="700" height="600" class="embeddrop" frameborder="0" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe></center>
 
 <% elsif @binder.current_version.youtube? %>
 
@@ -49,16 +49,33 @@
 <% end %>
 
 
-<div class="content-actions">
-<% if !@binder.current_version.embed %>
-	<% if @binder.format == 1 %>
 
-		<%= link_to "Download #{@binder.title}", named_binder_route(@binder, "download"), :target => "_blank" %>	
 
-	<% else %>
 
-		<%= link_to @binder.title, @binder.current_version.data, :target => "_blank" %>
 
+<div class="actionswrap">
+	<div class="content-actions">
+
+		<button class="btn">
+			<img src="/assets/binders/fav.png" />
+			<div class="texter">Add to favorites</div>
+		</button>
+
+		<button class="btn">
+			<img src="/assets/binders/snap.png" />
+			<div class="texter">Snap to binder</div>
+		</button>
+
+	<% if !@binder.current_version.embed %>
+		<% if @binder.format == 1 %>
+
+			<% link_to "Download #{@binder.title}", named_binder_route(@binder, "download"), :target => "_blank" %>	
+
+		<% else %>
+
+			<% link_to @binder.title, @binder.current_version.data, :target => "_blank" %>
+
+		<% end %>
 	<% end %>
-<% end %>
+	</div>
 </div>
