--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -1,8 +1,65 @@
+
 <% 
 # this layout view is pretty disgusting, but the block variable's scope is limited to here, so the entirety of the content is stuck in this file 
 %>
 <div class="whitebox">
+
+	<!-- GETTING STARTED ONLY (make sure this only shows on home feed too) -->
+
+			<div class="findppl">
+
+
+				<div class="boxyleft">
+					<div class="maintxt" style="margin-bottom:20px">
+						Connect your PLN to Claco!
+					</div>
+
+					<div class="connectbtns">
+						<a href="#" class="zocial twitter">Connect with Twitter</a>
+					</div>
+
+					<div class="connectbtns">
+						<a href="#" class="zocial facebook">Connect with Facebook</a>
+					</div>
+
+				</div>
+
+				<div class="boxyright">
+					<div class="maintxt">
+						Know these educators? Subscribe to them!
+					</div>
+
+					<div class="imghold">
+						<img src="http://img.cla.co/95646e3ba333f6c808e7e25092708789/thumb_md.png" />
+						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
+						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
+						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
+						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
+						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+
+					</div>
+
+
+				</div>
+
+
+
+
+				<div style="clear:both"></div>
+			</div>
+
+
+
+			<!-- /GETTING STARTED -->
+
+
+
 	<div style="margin-top:-15px"></div>
+	
 	<% @feed.each do |f| %>
 		<div class="newsitem">
 			<div class="imgarea">
@@ -10,8 +67,7 @@
 					<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s if !f[:owner].info.nil? && !f[:owner].info.avatar.nil? %>>
 				</a>
 			</div>
-			<% case f[:log]['method'].to_s
-
+			<% case f[:log]['method'].to_s 
 				when "create" %>
 
 					<div class="feedcontent">
