--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,6 +7,11 @@
           <a class="brand" href="/"><%= image_tag("claco.png", :style => "height:24px") %></a>
           <div class="nav-collapse">
 
+            <a href="/conversations" class="btn top-notch-btn notch-nav">
+              <%= image_tag("profile/message.png", :style => "height:16px;width:16px;margin-top:-5px") %>
+              <div class="notchNum">33</div>
+            </a>
+
 
           <% if signed_in? %>
 
@@ -47,7 +52,7 @@
             <ul class="nav nav-pills pull-right">
               <li class="dropdown">
 
-                <button id="top-notch-btn" data-toggle="dropdown" class="btn">Sign in</button>
+                <button data-toggle="dropdown" class="btn top-notch-btn notch-login">Sign in</button>
                 <ul class="dropdown-menu noclose">
                   <%= form_for("teacher", :url => teacher_session_path) do |f| %>
                     <%= f.text_field :login, :class => "span3 login-focus", :placeholder => "Username / Email" %>
